--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body oncontextmenu="return false">
 
 <!-- pre loader -->
-<!-- <div class="loader-container">
-  <img draggable="false" src="./assets/images/preloader.gif" alt="">
-</div> -->
+<div class="loader-container">
+  <img draggable="false" src="./assets/images/preloader1.gif" alt="">
+</div>
 
 <!-- navbar starts -->
 <header>
@@ -184,7 +184,7 @@
 
   <div class="box-container">
 
-    <!-- <div class="box tilt">
+    <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -198,7 +198,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
 </div>
 
