--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
   <div class="container">
     <div class="row" id="skillsContainer">
+      <!--"name": "WordPress", "Music Production"-->
       <!-- <div class="bar">
         <div class="info">
         <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
@@ -362,6 +363,18 @@
 <!-- scroll top btn -->
 <a href="#home" aria-label="ScrollTop" class="fas fa-angle-up" id="scroll-top"></a>
 <!-- scroll back to top -->
+
+<!--Google Analytics buttons start-->
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZCGKLHGVX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XXXXXXXXXX'); // Replace with your actual Measurement ID
+</script>
+
+<!--Google Analytics buttons end-->
 
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS STARTS ==== -->
