--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link id='favicon' rel="shortcut icon" href="./assets/images/MyFavicon.ico" type="image/x-png">
     <title>Om Kiran Kar | Solution Provider</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZCGKLHGVX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZCGKLHGVX');
+</script>
+
 <body oncontextmenu="return false">
 
 <!-- pre loader -->
