--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,16 @@
 </head>
 <body oncontextmenu="return false">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZCGKLHGVX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZCGKLHGVX');
+</script>
+
 <!-- navbar starts -->
 <header>
         <a href="/" class="logo"><img src="/assets/images/MyLogo1.png"></img>OmKiran</a>
