--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <div class="container">
     <div class="row" id="skillsContainer">
-      <!--"name": "WordPress", "Music Production"-->
+      <!--"name": "WordPress", "Music Production", "RFID and NFC Card -	Written the website URL of personal website made by me and other Software Engineer in Exicom of our company executives on the NFC Tag. These NFC Tags are used a business card."-->
       <!-- <div class="bar">
         <div class="info">
         <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
