--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3>I'm Om Kiran Kar</h3>
         <span class="tag">Software Developer and Electronics Engineer</span>
         
-        <p>I am an Electronics and Telecommunication Engineer based in Mumbai, Inida.
+        <p>I am an Electronics and Telecommunication Engineer based in Mumbai, India.
           I am Passionate about developing new projects and solving real-world problems through technology.
           My skills range from programming, web development, application development to IoT, electronics, RF and embedded systems.
           I am enthusiatic about learning new technologies and taking on challenging projects.</p>
