--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/MyPhoto1.jpeg" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/MyPhoto5.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
